# task-processing-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_tasks.py  0002_add_run_after.py
app/: config.py  db.py  log.py  main.py  metrics.py  models.py  schemas.py  worker.py
app/api/: tasks.py  workers.py
app/services/: task_service.py  worker_service.py
scripts/: README.md  perf_explain.sql  perf_explain_old.sql  perf_seed.py
tests/: conftest.py  test_lateral_claim.py  test_observability.py  test_schema.py  test_tasks_api.py  test_worker.py
